themes/base_files/scss/_cypht-tiki.scss
.inline-cypht {
    font-family: $font-family-base;
    color: var(--bs-body-color) !important;
    position: relative;
    overflow-y: hidden;
    background-color: var(--bs-secondary-bg);

    .hide { display: none !important; }
    // override colors when not using cypht default theme
    img { opacity: 1 !important; max-width: 100%; }
    main, div { border-radius: 0; }
    i.bi, .folders li, .inner_list li { color: var(--bs-body-color) !important; }
    .ui-widget-content { background-color: $tiki-ui-default-bg !important; }
    .ui-menu-item-wrapper { color: var(--bs-body-color) !important; }
    .ui-state-active { color: $tiki-ui-default-link-active-color !important; }
    .popover-header { color: $popover-header-color !important; }
    .popover-body { color: $popover-body-color !important; }
    .btn-primary {
        color: color-yiq($primary) !important;
        background-color: $primary !important;
        border-color: darken($primary, 7.5%) !important;
        &:hover, &:focus { background-color: darken($primary, 7.5%) !important; }
    }
    .btn-info {
        color: color-yiq($info) !important;
        background-color: $info !important;
        border-color: darken($info, 7.5%) !important;
        &:hover, &:focus { background-color: darken($info, 7.5%) !important; }
    }
    .card { border-color: $card-border-color !important; }
    .card-header { border-color: $card-border-color !important; }
    .card-body {
        .nav-link {
            &, small { color: inherit !important; }
        }
    }
    .dropdown-divider { border-color: $dropdown-divider-bg !important; }
    .dropdown-header { color: $dropdown-header-color !important; }
    .moduletitle { color: var(--bs-body-color) !important; }
    a:not(.dropdown-item) .icon, .btn-link {
        border-color: transparent !important;
        color: inherit !important;
        &:hover { color: var(--bs-link-hover-color) !important; }
    }
    .nav-tabs {
        border: none !important;
        border-bottom: 1px solid $nav-tabs-border-color !important;
        .nav-link { color: inherit !important; }
        .nav-link.active, .nav-item.show .nav-link { color: var(--bs-link-hover-color) !important; }
        .nav-link:not(.active) { border: none !important; }
    }
    .compose_to, .compose_bcc, .compose_cc { color: var(--bs-body-color) !important; }
    // override colors when not using cypht default theme

    .draft_folder_select, .sent_folder_select, .trash_folder_select, .delete_folder_select, .rename_folder_select, .rename_parent_folder_select, .parent_folder_select, .archive_folder_select {
        background-color: var(--bs-body-bg);
    }
    a:not(.btn), a.btn-link {
        color: inherit !important;
        &:hover {
            color: var(--bs-link-hover-color) !important;
            text-decoration: inherit;
        }
    }
    .s_pre { opacity: 0.5; color: var(--bs-body-color) !important; }

    .flipmodtitle.close, .close {
        height: $btn-close-height; // Bootstrap 5 changed from font to svg button bg.
        width: $btn-close-width;
        &, &:hover, &:focus { color: $btn-close-color !important; }
    }

    .navbar-light .navbar-nav .nav-link {
        color: $navbar-light-color !important;
        &:hover, &:focus { color: $navbar-light-hover-color !important; }
    }
    .navbar-dark .navbar-nav .nav-link {
        color: $navbar-dark-color !important;
        &:hover, &:focus { color: $navbar-dark-hover-color !important; }
    }
    .dropdown-menu .dropdown-item {
        border-radius: 0;
        &, .icon { color: $dropdown-link-color !important; }
        &:hover, &:focus {
            &, .icon { color: $dropdown-link-hover-color !important; }
        }
    }
}
/* ... */

